--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-feature android:name="android.hardware.camera" />
     <application
-        android:name="com.mobile.order.config.AppController"
+        android:name=".BaseApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -16,11 +16,7 @@
 
     </activity>
         <activity android:name="com.mobile.order.activity.MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name="com.mobile.order.activity.ConfigActivity">
 
@@ -44,11 +40,11 @@
 
         </activity>
         <activity android:name="com.mobile.order.activity.LoginActivity">
-           <!-- <intent-filter>
+           <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>-->
+            </intent-filter>
         </activity>
         <activity android:name="com.mobile.order.sample.wizard.MainActivity">
      <!--       <intent-filter>
@@ -63,6 +59,9 @@
 
         </activity>
         <activity android:name="com.mobile.order.activity.OnOffCameraFlashlight">
+
+        </activity>
+        <activity android:name="com.mobile.order.activity.SuccessActivity">
 
         </activity>
     </application>
