--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,7 @@ android {
         applicationId "com.mobile.order"
         minSdkVersion 19
         targetSdkVersion 28
+        multiDexEnabled true
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
